--- a/public/search/index.html
+++ b/public/search/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="wrbz15">
 <link rel="canonical" href="https://wrbz15.github.io/hugo-PaperMod/search/">
 <link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.bc1149f4a72aa4858d3a9f71462f75e5884ffe8073ea9d6d5761d5663d651e20.css" integrity="sha256-vBFJ9KcqpIWNOp9xRi915YhP/oBz6p1tV2HVZj1lHiA=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/hugo-PaperMod/assets/js/search.605d3069e89ba683895b7fa9e82ae48873064f65b962e5e7762e23d6650ea5d1.js" integrity="sha256-YF0waeibpoOJW3&#43;p6CrkiHMGT2W5YuXndi4j1mUOpdE="></script>
+<script defer crossorigin="anonymous" src="/hugo-PaperMod/assets/js/search.021a76f3c2e6c46ea2b5828cfe1c48ed773f801b5d063638fd573493604e14f7.js" integrity="sha256-Ahp288LmxG6itYKM/hxI7Xc/gBtdBjY4/Vc0k2BOFPc="></script>
 <link rel="icon" href="https://wrbz15.github.io/hugo-PaperMod/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://wrbz15.github.io/hugo-PaperMod/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://wrbz15.github.io/hugo-PaperMod/favicon-32x32.png">
@@ -209,7 +209,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="https://wrbz15.github.io/hugo-PaperMod/">往日不再</a></span>
+    <span>&copy; 2023 <a href="https://wrbz15.github.io/hugo-PaperMod/">往日不再</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
