--- a/public/search/index.html
+++ b/public/search/index.html
@@ -10,8 +10,9 @@
 <meta name="description" content="search">
 <meta name="author" content="wrbz15">
 <link rel="canonical" href="https://wrbz15.github.io/hugo-PaperMod/search/">
-<link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.bc1149f4a72aa4858d3a9f71462f75e5884ffe8073ea9d6d5761d5663d651e20.css" integrity="sha256-vBFJ9KcqpIWNOp9xRi915YhP/oBz6p1tV2HVZj1lHiA=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/hugo-PaperMod/assets/js/search.021a76f3c2e6c46ea2b5828cfe1c48ed773f801b5d063638fd573493604e14f7.js" integrity="sha256-Ahp288LmxG6itYKM/hxI7Xc/gBtdBjY4/Vc0k2BOFPc="></script>
+<meta name="google-site-verification" content="G-6XZRTH2116">
+<link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/hugo-PaperMod/assets/js/search.8c2e22ac76bfd42dd26a307c7e32c8a7f365a09ee7bc7c530a15a6cad9ea1387.js" integrity="sha256-jC4irHa/1C3SajB8fjLIp/NloJ7nvHxTChWmytnqE4c="></script>
 <link rel="icon" href="https://wrbz15.github.io/hugo-PaperMod/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://wrbz15.github.io/hugo-PaperMod/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://wrbz15.github.io/hugo-PaperMod/favicon-32x32.png">
@@ -55,7 +56,18 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Search" />
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XZRTH2116"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-6XZRTH2116', { 'anonymize_ip': false });
+}
+</script>
+<meta property="og:title" content="Search" />
 <meta property="og:description" content="search" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://wrbz15.github.io/hugo-PaperMod/search/" /><meta property="article:section" content="" />
