--- a/public/series/index.html
+++ b/public/series/index.html
@@ -10,7 +10,8 @@
 <meta name="description" content="wrbz15`s blog，golang，mysql，redis，微服务">
 <meta name="author" content="wrbz15">
 <link rel="canonical" href="https://wrbz15.github.io/hugo-PaperMod/series/">
-<link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.bc1149f4a72aa4858d3a9f71462f75e5884ffe8073ea9d6d5761d5663d651e20.css" integrity="sha256-vBFJ9KcqpIWNOp9xRi915YhP/oBz6p1tV2HVZj1lHiA=" rel="preload stylesheet" as="style">
+<meta name="google-site-verification" content="G-6XZRTH2116">
+<link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style">
 <link rel="icon" href="https://wrbz15.github.io/hugo-PaperMod/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="https://wrbz15.github.io/hugo-PaperMod/favicon-16x16.png">
 <link rel="icon" type="image/png" sizes="32x32" href="https://wrbz15.github.io/hugo-PaperMod/favicon-32x32.png">
@@ -55,7 +56,18 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Series" />
+</noscript>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6XZRTH2116"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-6XZRTH2116', { 'anonymize_ip': false });
+}
+</script>
+<meta property="og:title" content="Series" />
 <meta property="og:description" content="wrbz15`s blog，golang，mysql，redis，微服务" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://wrbz15.github.io/hugo-PaperMod/series/" />
