--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <meta name="description" content="wrbz15`s blog，golang，mysql，redis，微服务">
 <meta name="author" content="wrbz15">
-<link rel="canonical" href="https://wrbz15.github.io/wrbz15/">
+<link rel="canonical" href="./">
 <meta name="google-site-verification" content="G-6XZRTH2116">
-<link crossorigin="anonymous" href="/wrbz15/assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://wrbz15.github.io/wrbz15/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://wrbz15.github.io/wrbz15/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://wrbz15.github.io/wrbz15/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://wrbz15.github.io/wrbz15/apple-touch-icon.png">
-<link rel="mask-icon" href="https://wrbz15.github.io/wrbz15/safari-pinned-tab.svg">
+<link crossorigin="anonymous" href="./assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style">
+<link rel="icon" href="./favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+<link rel="mask-icon" href="./safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://wrbz15.github.io/wrbz15/index.xml">
-<link rel="alternate" type="application/json" href="https://wrbz15.github.io/wrbz15/index.json">
+<link rel="alternate" type="application/rss+xml" href="./index.xml">
+<link rel="alternate" type="application/json" href="./index.json">
 <noscript>
     <style>
         #theme-toggle,
@@ -72,7 +72,7 @@ if (!doNotTrack) {
 <meta property="og:title" content="往日不再" />
 <meta property="og:description" content="wrbz15`s blog，golang，mysql，redis，微服务" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://wrbz15.github.io/wrbz15/" />
+<meta property="og:url" content="/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="往日不再"/>
@@ -83,9 +83,9 @@ if (!doNotTrack) {
   "@context": "https://schema.org",
   "@type": "Organization",
   "name": "往日不再",
-  "url": "https://wrbz15.github.io/wrbz15",
+  "url": "/",
   "description": "wrbz15`s blog，golang，mysql，redis，微服务",
-  "thumbnailUrl": "https://wrbz15.github.io/wrbz15/favicon.ico",
+  "thumbnailUrl": "/favicon.ico",
   "sameAs": [
       "https://github.com/wrbz15", "mailto:1114546349@qq.com", "index.xml"
   ]
@@ -108,7 +108,7 @@ if (!doNotTrack) {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://wrbz15.github.io/wrbz15" accesskey="h" title="wrbz15&#39;s Blog (Alt + H)">wrbz15&#39;s Blog</a>
+            <a href="./" accesskey="h" title="wrbz15&#39;s Blog (Alt + H)">wrbz15&#39;s Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -134,32 +134,32 @@ if (!doNotTrack) {
         </div>
         <ul id="menu">
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
+                <a href="./search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
                     <span>🔍搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/" title="🏠主页">
+                <a href="./" title="🏠主页">
                     <span class="active">🏠主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/posts" title="📚文章">
+                <a href="./posts" title="📚文章">
                     <span>📚文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/archives/" title="⏱时间轴">
+                <a href="./archives/" title="⏱时间轴">
                     <span>⏱时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/tags" title="🔖标签">
+                <a href="./tags" title="🔖标签">
                     <span>🔖标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/about" title="🙋🏻‍♂️关于">
+                <a href="./about" title="🙋🏻‍♂️关于">
                     <span>🙋🏻‍♂️关于</span>
                 </a>
             </li>
@@ -218,7 +218,7 @@ if (!doNotTrack) {
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://wrbz15.github.io/wrbz15">往日不再</a></span>
+    <span>&copy; 2023 <a href="./">往日不再</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
