--- a/series/index.html
+++ b/series/index.html
@@ -9,17 +9,17 @@
 <meta name="keywords" content="">
 <meta name="description" content="wrbz15`s blog，golang，mysql，redis，微服务">
 <meta name="author" content="wrbz15">
-<link rel="canonical" href="https://wrbz15.github.io/wrbz15/series/">
+<link rel="canonical" href="../series/">
 <meta name="google-site-verification" content="G-6XZRTH2116">
-<link crossorigin="anonymous" href="/wrbz15/assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://wrbz15.github.io/wrbz15/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://wrbz15.github.io/wrbz15/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://wrbz15.github.io/wrbz15/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://wrbz15.github.io/wrbz15/apple-touch-icon.png">
-<link rel="mask-icon" href="https://wrbz15.github.io/wrbz15/safari-pinned-tab.svg">
+<link crossorigin="anonymous" href="../assets/css/stylesheet.bccfefac377bc340f06c260aed1bddf49a4354816d7c570d6aac75a997986c95.css" integrity="sha256-vM/vrDd7w0DwbCYK7Rvd9JpDVIFtfFcNaqx1qZeYbJU=" rel="preload stylesheet" as="style">
+<link rel="icon" href="../favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+<link rel="apple-touch-icon" href="../apple-touch-icon.png">
+<link rel="mask-icon" href="../safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://wrbz15.github.io/wrbz15/series/index.xml">
+<link rel="alternate" type="application/rss+xml" href="../series/index.xml">
 <noscript>
     <style>
         #theme-toggle,
@@ -70,7 +70,7 @@ if (!doNotTrack) {
 <meta property="og:title" content="Series" />
 <meta property="og:description" content="wrbz15`s blog，golang，mysql，redis，微服务" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://wrbz15.github.io/wrbz15/series/" />
+<meta property="og:url" content="/series/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Series"/>
@@ -93,7 +93,7 @@ if (!doNotTrack) {
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://wrbz15.github.io/wrbz15" accesskey="h" title="wrbz15&#39;s Blog (Alt + H)">wrbz15&#39;s Blog</a>
+            <a href="../" accesskey="h" title="wrbz15&#39;s Blog (Alt + H)">wrbz15&#39;s Blog</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -119,32 +119,32 @@ if (!doNotTrack) {
         </div>
         <ul id="menu">
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
+                <a href="../search" title="🔍搜索 (Alt &#43; /)" accesskey=/>
                     <span>🔍搜索</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/" title="🏠主页">
+                <a href="../" title="🏠主页">
                     <span>🏠主页</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/posts" title="📚文章">
+                <a href="../posts" title="📚文章">
                     <span>📚文章</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/archives/" title="⏱时间轴">
+                <a href="../archives/" title="⏱时间轴">
                     <span>⏱时间轴</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/tags" title="🔖标签">
+                <a href="../tags" title="🔖标签">
                     <span>🔖标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/about" title="🙋🏻‍♂️关于">
+                <a href="../about" title="🙋🏻‍♂️关于">
                     <span>🙋🏻‍♂️关于</span>
                 </a>
             </li>
@@ -161,7 +161,7 @@ if (!doNotTrack) {
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://wrbz15.github.io/wrbz15">往日不再</a></span>
+    <span>&copy; 2023 <a href="../">往日不再</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
