--- a/public/404.html
+++ b/public/404.html
@@ -123,7 +123,7 @@ if (!doNotTrack) {
                 </a>
             </li>
             <li>
-                <a href="https://wrbz15.github.io/wrbz15/wrbz15/" title="🏠主页">
+                <a href="https://wrbz15.github.io/wrbz15" title="🏠主页">
                     <span>🏠主页</span>
                 </a>
             </li>
